run_logs/a315ed51fb3e446f87075ff3c710e1ce.log
  File "/Users/brianswitach/Documents/lohas/bot_csv.py", line 83
    _orig_print(*a, **kw)
    ^
IndentationError: expected an indented block
